--- a/app/src/main/res/layout/daily_collection.xml
+++ b/app/src/main/res/layout/daily_collection.xml
@@ -12,19 +12,25 @@
             type="com.nic.TPTaxDepartment.activity.DailyCollection" />
     </data>
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <RelativeLayout
+
         android:id="@+id/activity_main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        >
 
-
-        <com.google.android.material.appbar.AppBarLayout
+        <RelativeLayout
+            android:background="@android:color/transparent"
+            android:id="@+id/img_rll"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:elevation="0dp"
-            android:translationZ="0.1dp"
-            android:background="@android:color/transparent">
+            android:layout_height="@dimen/_120sdp"
+            >
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="fitCenter"
+                android:background="@drawable/header_login"
+                ></ImageView>
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -32,13 +38,14 @@
                 android:layout_height="wrap_content"
                 app:contentInsetLeft="0dp"
                 app:contentInsetStart="0dp"
+                android:elevation="0dp"
                 app:layout_scrollFlags="scroll|enterAlways|snap">
 
                 <RelativeLayout
                     android:id="@+id/header_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="220dp"
-                    android:background="@drawable/header_login">
+                    android:layout_height="wrap_content"
+                    >
 
 
                     <ImageView
@@ -85,6 +92,7 @@
                 </RelativeLayout>
 
                 <View
+                    android:visibility="gone"
                     android:id="@+id/horizontal_line"
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
@@ -92,14 +100,20 @@
                     android:background="#FFF" />
             </androidx.appcompat.widget.Toolbar>
 
-        </com.google.android.material.appbar.AppBarLayout>
+        </RelativeLayout>
 
 
+
+
+        ///back ground drawable
         <RelativeLayout
+
+            android:visibility="gone"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <RelativeLayout
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -123,6 +137,7 @@
                     android:src="@drawable/circletransparant" />
 
                 <ImageView
+                    android:visibility="gone"
                     android:id="@+id/circle3"
                     android:layout_width="162dp"
                     android:layout_height="162dp"
@@ -133,6 +148,7 @@
                     android:src="@drawable/circle" />
 
                 <ImageView
+                    android:layout_alignParentRight="true"
                     android:id="@+id/circle4"
                     android:layout_width="124dp"
                     android:layout_height="124dp"
@@ -145,132 +161,105 @@
             </RelativeLayout>
 
         </RelativeLayout>
-        <androidx.core.widget.NestedScrollView
-            android:id="@+id/scroll_view"
+        <RelativeLayout
+            android:id="@+id/date_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+            android:layout_height="@dimen/header"
+            android:layout_marginLeft="@dimen/_25sdp"
+            android:layout_marginTop="@dimen/padding"
+            android:layout_marginRight="@dimen/_25sdp"
+            android:background="@drawable/click_here"
+            android:layout_below="@+id/img_rll"
+            android:orientation="vertical"
+            android:onClick="@{()-> activity.showDatePickerDialog()}"
+            android:visibility="visible">
 
-            <RelativeLayout
+
+            <TextView
+                android:id="@+id/date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center">
-                <LinearLayout
-                    android:id="@+id/road_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:orientation="vertical">
+                android:layout_alignParentStart="true"
+                android:layout_centerInParent="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="10dp"
+                android:layout_toLeftOf="@+id/calendar_icon"
+                android:ellipsize="marquee"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:hint=""
+                android:textAlignment="viewStart"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/_15sdp"
+                customfontdemo:fontName="@string/font_circular_book" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/margin_left_20dp"
-                            android:layout_marginRight="@dimen/margin_left_20dp"
-                            android:layout_marginTop="10dp"
-                            android:text="Date"
-                            android:textColor="@android:color/black"
-                            android:textSize="@dimen/_16sdp"
-                            android:visibility="visible"
-                            customfontdemo:fontName="@string/font_circular_medium" />
+            <TextView
+                android:id="@+id/calendar_icon"
 
-                        <RelativeLayout
-                            android:id="@+id/date_layout"
-                            android:layout_width="match_parent"
-                            android:layout_height="@dimen/header"
-                            android:layout_marginLeft="@dimen/_25sdp"
-                            android:layout_marginTop="@dimen/padding"
-                            android:layout_marginRight="@dimen/_25sdp"
-                            android:background="@drawable/click_here"
-                            android:orientation="vertical"
-                            android:onClick="@{()-> activity.showDatePickerDialog()}"
-                            android:visibility="visible">
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerInParent="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginRight="@dimen/_6sdp"
+                android:background="@drawable/datepicker_icon"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+
+                android:gravity="center" />
 
 
-                            <TextView
-                                android:id="@+id/date"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentStart="true"
-                                android:layout_centerInParent="true"
-                                android:layout_centerHorizontal="true"
-                                android:layout_marginLeft="10dp"
-                                android:layout_toLeftOf="@+id/calendar_icon"
-                                android:ellipsize="marquee"
-                                android:focusable="true"
-                                android:focusableInTouchMode="true"
-                                android:hint=""
-                                android:textAlignment="viewStart"
-                                android:textColor="@android:color/black"
-                                android:textSize="@dimen/_15sdp"
-                                customfontdemo:fontName="@string/font_circular_book" />
+        </RelativeLayout>
 
-                            <TextView
-                                android:id="@+id/calendar_icon"
-
-                                android:layout_width="35dp"
-                                android:layout_height="35dp"
-                                android:layout_alignParentEnd="true"
-                                android:layout_centerInParent="true"
-                                android:layout_centerHorizontal="true"
-                                android:layout_marginRight="@dimen/_6sdp"
-                                android:background="@drawable/datepicker_icon"
-                                android:focusable="true"
-                                android:focusableInTouchMode="true"
-
-                                android:gravity="center" />
+        <RelativeLayout
+            android:id="@+id/recy_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="0dp"
+            android:layout_below="@+id/date_layout"
+            android:layout_marginBottom="0dp"
+            android:gravity="center">
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/dailyCollection_recycler"
+                android:scrollbarSize="1dp"
+                android:padding="@dimen/margin_left_20dp"
+                android:visibility="visible"
+                android:scrollbars="vertical"/>
+            <ImageView
+                android:layout_width="250dp"
+                android:layout_height="150dp"
+                android:src="@drawable/no_data_ic"
+                android:scaleType="centerCrop"
+                android:padding="15dp"
+                android:visibility="gone"
+                android:layout_marginTop="50dp"
+                android:layout_centerInParent="true"
+                android:id="@+id/no_data_found"></ImageView>
 
 
-                        </RelativeLayout>
-
-                    </LinearLayout>
+        </RelativeLayout>
 
 
-                    <RelativeLayout
-                        android:id="@+id/recy_layout"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="0dp"
-                        android:layout_marginBottom="0dp"
-                        android:gravity="center">
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:id="@+id/dailyCollection_recycler"
-                            android:scrollbarSize="1dp"
-                            android:padding="@dimen/margin_left_20dp"
-                            android:visibility="gone"
-                            android:scrollbars="vertical"/>
-                        <ImageView
-                            android:layout_width="250dp"
-                            android:layout_height="150dp"
-                            android:src="@drawable/no_data_ic"
-                            android:scaleType="centerCrop"
-                            android:padding="15dp"
-                            android:visibility="gone"
-                            android:layout_marginTop="60dp"
-                            android:layout_centerInParent="true"
-                            android:id="@+id/no_data_found"></ImageView>
+        <RelativeLayout
+            android:background="@android:color/transparent"
+            android:id="@+id/below_bg"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_90sdp"
+            android:visibility="gone"
+            android:layout_alignParentBottom="true"
+            >
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="fitCenter"
+                android:background="@drawable/header_login"
+                android:rotation="180"></ImageView>
 
-
-                    </RelativeLayout>
-
-
-                </LinearLayout>
-
-
-            </RelativeLayout>
-
-
-        </androidx.core.widget.NestedScrollView>
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+        </RelativeLayout>
+    </RelativeLayout>
 
 
 </layout>
