--- a/app/src/main/res/layout/trade_recycler.xml
+++ b/app/src/main/res/layout/trade_recycler.xml
@@ -47,7 +47,7 @@
             android:layout_height="match_parent"
             android:gravity="start"
             android:textSize="16sp"
-            android:textColor="@color/border_line"
+            android:textColor="@color/grey1"
             android:id="@+id/code"
             android:text="Code"
             android:fontFamily="sans-serif" />
@@ -59,7 +59,7 @@
             android:layout_height="match_parent"
             android:gravity="start"
             android:textSize="16sp"
-            android:textColor="@color/border_line"
+            android:textColor="@color/grey1"
             android:layout_toRightOf="@+id/paymentDate"
             android:fontFamily="sans-serif"
             android:text=" : "
@@ -92,7 +92,7 @@
             android:gravity="start"
             android:textSize="16sp"
             android:layout_marginTop="5dp"
-            android:textColor="@color/border_line"
+            android:textColor="@color/grey1"
             android:id="@+id/mobile"
             android:layout_below="@+id/code"
             android:text="Mobile"
@@ -103,7 +103,7 @@
             android:layout_height="match_parent"
             android:gravity="start"
             android:textSize="16sp"
-            android:textColor="@color/border_line"
+            android:textColor="@color/grey1"
             android:layout_marginTop="5dp"
             android:layout_toRightOf="@+id/paymentDate"
             android:layout_below="@+id/code"
@@ -139,7 +139,7 @@
             android:layout_height="match_parent"
             android:gravity="start"
             android:textSize="16sp"
-            android:textColor="@color/border_line"
+            android:textColor="@color/grey1"
             android:layout_marginTop="5dp"
             android:id="@+id/paymentDate"
             android:layout_below="@+id/mobile"
@@ -152,7 +152,7 @@
             android:gravity="start"
             android:textSize="16sp"
             android:layout_marginTop="5dp"
-            android:textColor="@color/border_line"
+            android:textColor="@color/grey1"
             android:layout_toRightOf="@+id/paymentDate"
             android:layout_below="@+id/mobile"
             android:id="@+id/paymentdatec"
