--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -92,6 +92,7 @@
         <item>@color/darkgreen</item>
         <item>@color/colorPrimary</item>
     </integer-array>
+    <color name="full_transparent">#00FF0000</color>
     <color name="transparent_black_hex_1">#f3f3f3</color>
     <color name="transparent_black_hex_2">#e9e9e9</color>
     <color name="transparent_black_hex_3">#33000000</color>
@@ -103,6 +104,7 @@
     <color name="transparent_black_hex_9">#99000000</color>
 
     <color name="grey1">#878787</color>
+    <color name="grey2">#505454</color>
     <color name="black_grey">#666666</color>
     <color name="light_grey">#9c9c9c</color>
     <color name="silver">#FFCCCCCC</color>
