--- a/app/src/main/res/layout/field_visit_recycler.xml
+++ b/app/src/main/res/layout/field_visit_recycler.xml
@@ -28,23 +28,33 @@
                 android:gravity="center"
                 android:layout_gravity="center_horizontal"
                 android:id="@+id/right">
-                <TextView
+
+                <RelativeLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textColor="@color/white"
+                    android:layout_height="30dp"
                     android:background="@drawable/upload_bg"
-                    android:textSize="16sp"
-                    android:paddingTop="3dp"
-                    android:paddingBottom="3dp"
-                    android:paddingRight="20dp"
-                    android:paddingLeft="20dp"
-                    android:id="@+id/upload"
-                    android:drawablePadding="8dp"
-                    android:drawableLeft="@drawable/ic_upload"
-                    android:drawableTint="@color/white"
-                    android:text="Upload"
-                    android:fontFamily="sans-serif" />
+                    >
+                    <TextView
+                        android:layout_toRightOf="@+id/icon_upload"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textColor="@color/white"
+                        android:textSize="16sp"
+                        android:layout_centerVertical="true"
+                        android:id="@+id/upload"
+                        android:text="Upload"
+                        android:paddingRight="5dp"
+                        android:fontFamily="sans-serif" />
+                    <ImageView
+                        android:layout_centerVertical="true"
+                        android:id="@+id/icon_upload"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:padding="8dp"
+                        android:src="@drawable/upload_new_icon"></ImageView>
+                </RelativeLayout>
+
 
             </RelativeLayout>
         </LinearLayout>
