New Trade Licence Screen show Amount to pay

--- a/app/src/main/res/layout/new_trade_licence_screen.xml
+++ b/app/src/main/res/layout/new_trade_licence_screen.xml
@@ -600,7 +600,7 @@
             android:layout_below="@+id/appBarLayout"
             android:id="@+id/second"
             android:layout_marginBottom="@dimen/padding"
-            android:visibility="visible"
+            android:visibility="gone"
             android:orientation="vertical">
             //Ward No
             <LinearLayout
@@ -1254,6 +1254,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/annual_sale_text_id"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/margin_left_20dp"
@@ -1399,7 +1400,7 @@
                    android:layout_below="@+id/second"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical"
-                   android:visibility="gone">
+                   android:visibility="visible">
 
                    //Motor is Available
 
@@ -1867,7 +1868,7 @@
                        android:layout_marginTop="@dimen/padding"
                        android:layout_marginRight="@dimen/margin_left_20dp"
                        android:text="Amount to pay 550"
-                       android:textColor="@color/grey1"
+                       android:textColor="@color/grey2"
                        android:textSize="@dimen/_15sdp"
                        android:visibility="gone" />
 
@@ -1894,7 +1895,7 @@
 
                            android:layout_centerInParent="true"
                            android:text="Amount to pay 550"
-                           android:textColor="@color/grey1"
+                           android:textColor="@color/grey2"
                            android:textSize="@dimen/_15sdp" />
 
                        <RelativeLayout
@@ -2086,7 +2087,7 @@
                     android:layout_marginLeft="@dimen/_10sdp"
                     android:background="@drawable/back"
                     android:backgroundTint="@android:color/white"
-                    androidnClick="@{()-> activity.closeDoc()}" />
+                    android:onClick="@{()-> activity.closeDoc()}" />
 
 
                 <TextView
@@ -2112,8 +2113,8 @@
                     android:adjustViewBounds="true"
                     android:background="@drawable/ic_home_black_24dp"
                     android:backgroundTint="@android:color/white"
-                    androidnClick="@{()-> activity.dashboard()}"
-                    androidcaleType="centerInside" />
+                    android:onClick="@{()-> activity.dashboard()}"
+                    android:scaleType="centerInside" />
 
 
             </RelativeLayout>
