--- a/app/src/main/res/layout/new_trade_licence_screen.xml
+++ b/app/src/main/res/layout/new_trade_licence_screen.xml
@@ -1780,20 +1780,19 @@
                            customfontdemo:fontName="@string/font_circular_medium" />
 
                        <RelativeLayout
-                           android:layout_width="match_parent"
-                           android:layout_height="@dimen/header"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_left_20dp"
                            android:layout_marginTop="@dimen/padding"
                            android:layout_marginRight="@dimen/margin_left_20dp"
-                           android:orientation="vertical"
-                           android:visibility="visible">
+                           android:orientation="vertical">
 
                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
 
-                               android:hint="property Tax Assessment Number">
+                               android:hint="Number">
 
                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/property_tax_assessment_number"
@@ -1805,6 +1804,8 @@
                            </com.google.android.material.textfield.TextInputLayout>
 
                        </RelativeLayout>
+
+
 
 
                    </LinearLayout>
