--- a/app/src/main/res/layout/existing_trade_details_view_new.xml
+++ b/app/src/main/res/layout/existing_trade_details_view_new.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/document_layout"
-            android:visibility="gone">
+            android:visibility="visible">
             <RelativeLayout
                 android:id="@+id/header2_layout"
                 android:layout_width="match_parent"
@@ -75,12 +75,24 @@
                 android:layout_height="match_parent"
                 android:layout_below="@+id/header2_layout"
                 android:id="@+id/documentViewer"/>
+            <TextView
+                android:id="@+id/pageNum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
+                android:text="0"
+                android:textAlignment="center"
+                android:textColor="@color/grey2"
+                android:textSize="13sp"
+                android:textStyle="bold" />
+
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/main"
-            android:visibility="visible">
+            android:visibility="gone">
             <com.google.android.material.appbar.AppBarLayout
                 android:layout_width="match_parent"
                 app:elevation="0dp"
