--- a/app/src/main/res/layout/field_visit.xml
+++ b/app/src/main/res/layout/field_visit.xml
@@ -606,14 +606,14 @@
                             android:layout_width="match_parent"
                             android:layout_height="100dp"
                             android:id="@+id/field_img1"
-                            android:src="@drawable/no_data_icon"
+                            android:src="@drawable/no_data_ic"
                             android:scaleType="fitCenter"></ImageView>
                         <ImageView
                             android:layout_marginTop="10dp"
                             android:layout_width="200dp"
                             android:layout_height="100dp"
                             android:id="@+id/field_img2"
-                            android:src="@drawable/no_data_icon"
+                            android:src="@drawable/no_data_ic"
                             android:scaleType="fitCenter"></ImageView>
                     </LinearLayout>
 
