--- a/app/src/main/res/layout/image_with_description.xml
+++ b/app/src/main/res/layout/image_with_description.xml
@@ -41,7 +41,7 @@
                     <ImageView
                         android:id="@+id/image_view_preview"
                         android:layout_width="match_parent"
-                        android:layout_height="100dp"
+                        android:layout_height="170dp"
                         android:scaleType="fitXY"
                         android:background="@drawable/capture_image"
                         />
@@ -87,7 +87,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
+                        android:visibility="gone"
                         android:orientation="horizontal">
 
 
