--- a/app/src/main/res/layout/new_dashboard.xml
+++ b/app/src/main/res/layout/new_dashboard.xml
@@ -160,20 +160,33 @@
             </RelativeLayout>
 
         </RelativeLayout>
+        <RelativeLayout
+            android:background="@android:color/transparent"
+            android:id="@+id/below_bg"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_90sdp"
+            android:layout_alignParentBottom="true"
+            >
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="fitCenter"
+                android:background="@drawable/header_login"
+                android:rotation="180"></ImageView>
+
+        </RelativeLayout>
 
 
         <ScrollView
-            android:layout_above="@+id/below_bg"
-            android:layout_below="@+id/img_rll"
             android:visibility="visible"
             android:id="@+id/scroll_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="match_parent">
 
                 <LinearLayout
                     android:orientation="vertical"
                     android:id="@+id/road_layout"
+                    android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     >
@@ -649,21 +662,6 @@
                 </LinearLayout>
         </ScrollView>
 
-        <RelativeLayout
-            android:background="@android:color/transparent"
-            android:id="@+id/below_bg"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_90sdp"
-            android:layout_alignParentBottom="true"
-            >
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scaleType="fitCenter"
-                android:background="@drawable/header_login"
-                android:rotation="180"></ImageView>
-
-        </RelativeLayout>
     </RelativeLayout>
 
 </layout>
