--- a/app/src/main/res/layout/new_trade_licence_screen.xml
+++ b/app/src/main/res/layout/new_trade_licence_screen.xml
@@ -17,7 +17,6 @@
         android:layout_height="match_parent"
         android:id="@+id/main"
         android:visibility="visible"
-        android:layout_marginBottom="50dp"
         android:orientation="vertical">
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
@@ -95,10 +94,11 @@
 
         </com.google.android.material.appbar.AppBarLayout>
        <ScrollView
+           android:layout_above="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scroll_view"
-           android:layout_marginBottom="45dp"
+           android:background="@color/transparent_black_hex_1"
            android:layout_below="@+id/appBarLayout">
            <LinearLayout
                android:layout_width="match_parent"
@@ -2024,13 +2024,11 @@
            </LinearLayout>
        </ScrollView>
         <RelativeLayout
+            android:layout_marginBottom="40dp"
             android:id="@+id/bottom_layout"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_gravity="bottom"
-            android:layout_below="@+id/scroll_view"
-            android:paddingBottom="0dp"
-            android:layout_marginTop="-40dp"
+            android:layout_alignParentBottom="true"
             android:background="@drawable/background">
 
 
