--- a/app/src/main/res/drawable/new_rect_angle_curve_box.xml
+++ b/app/src/main/res/drawable/new_rect_angle_curve_box.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#FFFFFF" />
-    <corners android:radius="10dp" />
+    <corners android:radius="15dp" />
+    <stroke android:width="1dp" android:color="@color/transparent_black_hex_1"></stroke>
 
 
 </shape>
